ingress-service-elb-06.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: haproxy-ingress
  name: haproxy-ingress
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
  namespace: default
spec:
  #externalIPs:
    #- 10.245.1.4
  ports:
  - name: port-1
    port: 80
    protocol: TCP
    targetPort: 80
  - name: port-2
    port: 443
    protocol: TCP
    targetPort: 443
  - name: port-3
    port: 1936
    protocol: TCP
    targetPort: 1936
  type: LoadBalancer
  selector:
    run: haproxy-ingress
