http-svc-ingress-rule-03.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
spec:
  rules:
  - host: app-test.kubernetes.cryptoape.net
    http:
      paths:
      - path: /app
        backend:
          serviceName: http-svc
          servicePort: 8080
      - path: /
        backend:
          serviceName: ingress-default-backend
          servicePort: 8080
